--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.dat
+data/
 data/*.dat
 data/logs/*
 data/users/*
 .token
 *.swp
+nohup.out
